--- a/Sweet/Base.lproj/LaunchScreen.storyboard
+++ b/Sweet/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14252.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,10 +24,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="FAS-5F-dHB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="H5f-zX-YPQ"/>
+                            <constraint firstItem="FAS-5F-dHB" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="2Jj-Xq-1GI"/>
+                            <constraint firstItem="FAS-5F-dHB" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="55x-A7-ffF"/>
                             <constraint firstItem="FAS-5F-dHB" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="NXK-wd-qxU"/>
-                            <constraint firstItem="FAS-5F-dHB" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="YGo-il-XOu"/>
-                            <constraint firstItem="FAS-5F-dHB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gYI-Bt-Bph"/>
+                            <constraint firstItem="FAS-5F-dHB" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="a3e-Ut-qy1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
